// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

enum UserRole {
  USER
  ADMIN
}

enum ReservationStatus {
  ACTIVE
  CANCELLED_BY_USER
  CANCELLED_BY_ADMIN
}

model User {
  id           Int           @id @default(autoincrement())
  email        String        @unique
  passwordHash String
  role         UserRole      @default(USER)
  createdAt    DateTime      @default(now())
  reservations Reservation[]
}

model Facility {
  id           Int           @id @default(autoincrement())
  name         String
  description  String?
  openTime     String
  closeTime    String
  createdAt    DateTime      @default(now())
  reservations Reservation[]
}

model Reservation {
  id         Int               @id @default(autoincrement())
  userId     Int
  facilityId Int
  startTime  DateTime
  endTime    DateTime
  status     ReservationStatus @default(ACTIVE)
  createdAt  DateTime          @default(now())
  user       User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  facility   Facility          @relation(fields: [facilityId], references: [id], onDelete: Cascade)

  @@index([facilityId, startTime, endTime])
  @@index([userId, startTime])
}
